# hpc-stuff-playground

chameleon/experiment/task-exetime-prediction/: logfile.txt  taskruntime_pred_model_size_freq_vs_exetime.py
chameleon/experiment/task-exetime-prediction/cxx_version/: CMakeLists.txt  taskruntime-pred.cpp
chameleon/experiment/test-example/: EXP-Chameleon-ENVs_CoolMUC.sh  EXP-Chameleon-ENVs_MNMServer.sh  Makefile  multiple-apps.cpp  multiple-apps.hpp
chameleon/src/: chameleon.cpp  chameleon.h  chameleon_common.h  chameleon_statistics.cpp  chameleon_statistics.h  chameleon_strategies.cpp  chameleon_tools.cpp  chameleon_tools.h  chameleon_tools_internal.h  commthread.cpp
dist-stuff/bcl_examples/cir_queue/: Makefile  cirqueue_pushpop.cpp  submit_job_coolmuc.cmd
dist-stuff/bcl_examples/fast_queue/: fastqueue_pushpop.cpp
dist-stuff/bcl_examples/task_stealing_queue/: Makefile  Readme.md  run_on_laptopnm.sh  run_script_on_laptopnm.sh  run_with_INSPXE_collect_on_laptopnm.sh  run_with_ITAC_on_laptopnm.sh  taskStealing.cpp
dist-stuff/boost_serialization/: CMakeLists.txt  boost_serialize_obj_to_str.cpp  serialization_demo.cpp  types.h
dist-stuff/dynamic_lib/calc_example/: main.c  main_dynamic
dist-stuff/dynamic_lib/sum_example/: sum_function.cpp  sum_function.h
dist-stuff/game_of_life_2d/: Makefile  life_2D_mpi.cpp  output.txt
dist-stuff/hcl_examples/custom_queue_test/: Readme.md  custom_queue_test.cpp  types.h
dist-stuff/hcl_examples/installation_scripts/: Readme.md  build_hcl_on_coolmuc2.sh
dist-stuff/hcl_examples/mxm_task_stealing_queue/: CMakeLists.txt  Readme.md  main.cpp  mxm_kernel.h  mxm_task_types.h  util.h
dist-stuff/hcl_examples/mxm_task_stealing_queue/build_on_beast_tcp/: cmake-script-beast.sh
dist-stuff/hcl_examples/mxm_task_stealing_queue/build_on_beast_verbs/: cmake-script-beast-parallel-omp.sh  cmake-script-beast.sh  run_on_1_node.sh  run_on_2_nodes.sh
dist-stuff/hcl_examples/mxm_task_stealing_queue/build_on_coolmuc_verbs/: cmake-script-on-coolmuc2.sh  cmake-script-on-coolmuc2_gnu.sh  cmake-script-on-coolmuc2_oneapi.sh  submit_job_coolmuc.cmd  submit_job_coolmuc_gnu.cmd  submit_job_coolmuc_oneapi.cmd
dist-stuff/hcl_examples/mxm_task_stealing_queue/build_on_laptop_mnm/: cmake-script-hcl-gnu-laptop.sh  cmake-script-hcl-oneapi-laptop.sh  run_main_4_ranks_2thr.sh  server_list
dist-stuff/hcl_examples/queue_test/: CMakeLists.txt  complextype_queue_test.cpp  dbarr_struct_queue_test.cpp  queue_test.cpp
dist-stuff/hcl_examples/queue_test/build_on_coolmuc/: cmake-script-on-coolmuc2.sh
dist-stuff/hcl_examples/test_custom_datatype/: CMakeLists.txt  hcl_custom_data_test.cpp  types.h
dist-stuff/margo_rpc/argobots_margo_rpc/: provider_alpha_client.h
dist-stuff/margo_rpc/hello-rpc/: CMakeLists.txt  rpc-server.c
dist-stuff/margo_rpc/init-examples/: margo_server.c
dist-stuff/margo_rpc/non_block_transf/: CMakeLists.txt  client_nonblock_call.c  server_nonblock_resp.c
dist-stuff/mpi_oneside_example/: Makefile  submit_job_supermuc-ng.cmd
dist-stuff/thallium/init_thallium/: server.cpp  (+1 more)
dist-stuff/thallium/tl_hello_rpc/: CMakeLists.txt  tl_rpc_client.cpp  tl_rpc_server.cpp
dist-stuff/thallium/tl_string_transf_mpi_omp/: CMakeLists.txt
dist-stuff/thallium/tl_string_transf_mpi_omp/build_on_beast/: run_tl_rdma_string_transf.sh
ml-dl/pytorch_cxx/example-app/: CMakeLists.txt  example-app.cpp
ml-dl/regression_models/: sample-dataset-r3.csv
others/boost_serialization/: CMakeLists.txt  boost_concepts.cpp
others/dynamic_lib/sum_example/: CMakeLists.txt  main.cpp  sum_function.cpp
others/game_of_life_2d/: EXP_MPI_ITAC_ENVs.sh  life_2D_mpi.cpp  output.txt
others/hcl_examples/queue_test/: CMakeLists.txt  custom_queue_test.cpp  db_arr_struct_queue_test.cpp  dbptr_arr_struct_queue_test.cpp  dbptr_struct_queue_test.cpp  dbstdarr_struct_queue_test.cpp  queue_test.cpp  submit_job.cmd  util.h
others/hcl_examples/queue_test/build_on_beast/: cmake-script-beast.sh
others/hcl_examples/queue_test/build_on_beast_tcp/: cmake-script-beast.sh
others/hcl_examples/queue_test/build_on_coolmuc/: submit_job.cmd
others/hcl_examples/simple_test/: CMakeLists.txt  Makefile  simple_test.cpp
others/margo/init-examples/: CMakeLists.txt  margo_client.c  margo_server.c
others/margo_rpc/rpc_data_providers/: CMakeLists.txt  provider_alpha_client.c  server.c
others/margo_rpc/send_recv_args/: CMakeLists.txt  server_sum.c
others/margo_rpc/transf_data_over_rdma/: CMakeLists.txt  client_call.c  inout_struct.h  server_bulkdata_sum.c
others/mpi_oneside_example/: Makefile  main.c
others/regression_models/: sample-dataset-r0.csv  sample-dataset-r1.csv  sample-dataset-r2.csv  test_diff_regression_models.py
others/rpc_examples/simple_calculator/: CMakeLists.txt  cal_client.cpp  ser_clie_progs.conf  submit_job_script.cmd
others/taskflow-examples/: exp-taskflow-headers.sh
others/thallium/init_thallium/: CMakeLists.txt  client.cpp
others/thallium/rpc_handler_with_lambdas_obj/: CMakeLists.txt  tl_rpc_lamb_obj_client.cpp  tl_rpc_lamb_obj_server.cpp
others/thallium/tl_rdma_transf_custom_class/: CMakeLists.txt  tl_rdma_customclass_client.cpp  tl_rdma_customclass_server.cpp  types.h
others/thallium/tl_rdma_transf_custom_class/build_on_beast/: run_client.sh  run_server.sh
others/thallium/tl_rdma_transf_custom_class/build_on_coolmuc/: submit_job_coolmuc2.cmd
others/thallium/tl_rdma_transf_mpi_omp/: CMakeLists.txt  tl_mxm_rdma_transf.cpp  types.h
others/thallium/tl_rdma_transf_mpi_omp/build_on_beast/: cmake-script-beast-rome.sh
others/thallium/tl_rdma_transf_mpi_omp/build_on_lapnm/: cmake-script-lapnm.sh
others/thallium/tl_rmda_transf/: CMakeLists.txt  tl_rdma_server.cpp
others/thallium/tl_rpc_args/: CMakeLists.txt  tl_args_server.cpp
starpu/: SET_STARPU_ENV.sh
starpu/profiling/: Makefile
starpu/scheduler/: Makefile
starpu/stencil_gameoflife/: Makefile  life.c  stencil-blocks.c  stencil-kernels.c  stencil-tasks.c  stencil.c  stencil.h
starpu/vec_scal/: Makefile  scal_cpu.c  scal_cuda.cu  vector_scal.c
task-based-runtimes/chameleon/: CMakeCache.txt
(+177 files in other folders)
